@@ -10,6 +10,8 @@ Changelog
 - Fix sharing form for IE 11. [phgross]
 - Fix display of None on the bumblebee document overlay adapter as a document date. [Rotonen]
 - Fix pdf conversion for mails when resolving a dossier (ArchivalFileConverter). [njohner]
+- Add action to switch to new GEVER UI. [njohner]
+- Add generic view to retrieve the value of a setting. [njohner]
 - Lock oder of avaialbe roles in sharing endpoint. [phgross]
 - Fix archival_file and public_trial checks on documents overview. [phgross]
 - Add placeful workflow policy for inbox-area. Let inbox users edit and checkout documents but not the inbox itself. [phgross]
